--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -249,6 +249,7 @@ TrueGiantess = "GTS.esp|128CF4"
 
 LifeAbsorption = "GTS.esp|87F341"
 Acceleration = "GTS.esp|87F342"
+ShrinkingGaze = "GTS.esp|889543"
 
 
 
