--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -258,7 +258,7 @@ Breasts_Vore = "GTS.esp|856B38"
 Breasts_Suffocate = "GTS.esp|856B3A"
 Breasts_Absorb = "GTS.esp|856B39"
 Breasts_Mastery = "GTS.esp|856B3B"
-Breasts_MasteryPart2 = "GTS.esp|856B3D"
+Breasts_Predominance = "GTS.esp|856B3D"
 
 MightOfDragons = "GTS.esp|67FDAC"
 
