--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,30 +21,41 @@ jobs:
     name: build
     needs: pre_job
     if: needs.pre_job.outputs.should_skip != 'true'
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Checkout submodules
-        uses: srt32/git-actions@v0.0.3
+        uses: actions/checkout@v4
         with:
-          args: git submodule update --init --recursive
-      - name: Get cmake
+          submodules: true
+          fetch-depth: 0
+      - name: Cache CMake build
+        uses: actions/cache@v4
+        env:
+          cache-name: cmake-build-cache
+        with:
+          path: |
+            ${{github.workspace}}/build
+          key: ${{ env.cache-name }}-${{ hashFiles('**/CMakeLists.txt', 'cmake/**') }}
+          restore-keys: |
+            ${{ env.cache-name }}-
+      - name: Setup CMake
         uses: lukka/get-cmake@latest
-      - name: Add msbuild to PATH
-        # This works with 2017+
-        uses: microsoft/setup-msbuild@v1.1
-      - name: Restore artifacts, or setup vcpkg (do not install any package)
-        uses: lukka/run-vcpkg@v11
         with:
-          vcpkgGitCommitId: f6a5d4e8eb7476b8d7fc12a56dff300c1c986131
-      - name: Run CMake consuming CMakePreset.json and vcpkg.json by mean of vcpkg.
-        uses: lukka/run-cmake@v10
+          cmakeVersion: "~3.26.2"
+          ninjaVersion: "~1.11.0"
+
+      - name: Set Env
+        uses: TheMrMilchmann/setup-msvc-dev@v3.0.1
         with:
-          # configurePreset: build-release-msvc
-          # buildPreset: release-msvc
-          configurePreset: AE_SE_Release
-          buildPreset: Release-MSVC
+            arch: x64
+            toolset: 14.40
+
+
+      - name: Compile
+        run: |
+           cmake --preset AE_SE_Release
+           cmake --build build --config Release
+            
       - name: Copy Plugin
         shell: bash
         run: |
@@ -58,6 +69,7 @@ jobs:
           fi
           if [ -n "${root_folder}" ]; then
             cp "${root_folder}"/*.dll contrib/Distribution/Plugin/
+            cp "${root_folder}"/*.pdb contrib/Distribution/Plugin/
             ls -la "${root_folder}"/
             ls -la "${root_folder}"/*.pdb
             pdbs=( "${root_folder}"/*.pdb )
