--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -294,14 +294,9 @@ ButtCrush_UnstableGrowth = "GTS.esp|5FC368"
 ButtCrush_LoomingDoom = "GTS.esp|5FC369"
 ButtCrush_NoEscape = "GTS.esp|5FC36A"
 
-SizeAbsorption = "GTS.esp|610774"
+SizeConversion = "GTS.esp|610774"
 
 MightOfGiants = "GTS.esp|6AD6B1"
-
-
-
-
-
 
 
 [explosions]
