Slap Mutex on GetInitialScales

--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -253,7 +253,7 @@ ShrinkingGaze = "GTS.esp|889543"
 
 
 
-
+Breasts_Intro = "GTS.esp|898845"
 Breasts_Vore = "GTS.esp|856B38"
 Breasts_Suffocate = "GTS.esp|856B3A"
 Breasts_Absorb = "GTS.esp|856B39"
