Go back to old Commonlib

--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -11,6 +11,7 @@
             "baseline": "ef8d43afe4d26e842de3d034bff1081cb7990f07",
             "packages": [
                 "bethesda-skyrim-scripts",
+                "commonlibsse-ng",
                 "gluino",
                 "script-extender-common",
                 "skse"
