--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,55 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.21)
+message("Using toolchain file ${CMAKE_TOOLCHAIN_FILE}.")
 
-set (CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE
-      STRING "Choose the type of build.")
-	  
+########################################################################################################################
+## Define project
+########################################################################################################################
 project(
-	GtsPlugin
-	VERSION 1.0.0
-	DESCRIPTION "Size Matters Plugin."
-	LANGUAGES CXX
-)
-
+        GtsPlugin
+        VERSION 2.0.0
+        DESCRIPTION "Size Matters Plugin."
+        LANGUAGES CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+
 add_compile_definitions(_DISABLE_EXTENDED_ALIGNED_STORAGE)
 
-list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
+include(GNUInstallDirs)
 
-# #######################################################################################################################
-# # Add CMake features
-# #######################################################################################################################
-include(XSEPlugin)
+configure_file(
+        ${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.rc.in
+        ${CMAKE_CURRENT_BINARY_DIR}/version.rc
+        @ONLY)
 
-# #######################################################################################################################
-# # Find dependencies
-# #######################################################################################################################
-find_package(xbyak CONFIG REQUIRED)
+file(GLOB headers
+        include/GTS/*.hpp)
+
+file(GLOB sources
+        src/*.cpp
+        src/*/*.cpp
+        src/*/*/*.cpp
+        src/*/*/*/*.cpp
+
+        ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
+
+source_group(
+        TREE ${CMAKE_CURRENT_SOURCE_DIR}
+        FILES
+        ${headers}
+        ${sources}
+        )
+
+########################################################################################################################
+## Configure target DLL
+########################################################################################################################
+find_package(imgui CONFIG REQUIRED)
+find_package(CommonLibSSE CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(toml11 CONFIG REQUIRED)
 find_package(nlohmann_json 3.2.0 REQUIRED)
 find_path(GLUINO_INCLUDE_DIRS "gluino/gluino.h")
-find_path(CLIB_UTIL_INCLUDE_DIRS "ClibUtil/utils.hpp")
 
 include(FetchContent)
 FetchContent_Declare(cmake_git_version_tracking                   
@@ -41,41 +59,39 @@ FetchContent_Declare(cmake_git_version_tracking
 FetchContent_MakeAvailable(cmake_git_version_tracking)
 
 
-target_include_directories(
-	${PROJECT_NAME}
-	PRIVATE
-	${CLIB_UTIL_INCLUDE_DIRS}
-)
+add_commonlibsse_plugin(${PROJECT_NAME} DECLARATIVE SOURCES ${headers} ${sources})
+add_library("${PROJECT_NAME}::${PROJECT_NAME}" ALIAS "${PROJECT_NAME}")
 
-target_link_libraries(
-	${PROJECT_NAME}
-	PRIVATE
-	xbyak::xbyak
-	nlohmann_json::nlohmann_json
-	toml11::toml11
-	nlohmann_json::nlohmann_json
-	cmake_git_version_tracking
-)
+target_include_directories(${PROJECT_NAME}
+        PRIVATE
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/src>
+        $<INSTALL_INTERFACE:src>
+        ${GLM_INCLUDE_DIRS}
+        ${GLUINO_INCLUDE_DIRS}
+        )
 
-# https://gitlab.kitware.com/cmake/cmake/-/issues/24922#note_1371990
-if(MSVC_VERSION GREATER_EQUAL 1936 AND MSVC_IDE) # 17.6+
-	# When using /std:c++latest, "Build ISO C++23 Standard Library Modules" defaults to "Yes".
-	# Default to "No" instead.
-	#
-	# As of CMake 3.26.4, there isn't a way to control this property
-	# (https://gitlab.kitware.com/cmake/cmake/-/issues/24922),
-	# We'll use the MSBuild project system instead
-	# (https://learn.microsoft.com/en-us/cpp/build/reference/vcxproj-file-structure)
-	file(CONFIGURE OUTPUT "${CMAKE_BINARY_DIR}/Directory.Build.props" CONTENT [==[
-<Project>
-  <ItemDefinitionGroup>
-    <ClCompile>
-      <BuildStlModules>false</BuildStlModules>
-    </ClCompile>
-  </ItemDefinitionGroup>
-</Project>
-]==] @ONLY)
-endif()
+target_include_directories(${PROJECT_NAME}
+        PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+
+target_link_libraries(${PROJECT_NAME}
+        PRIVATE
+        toml11::toml11
+        nlohmann_json::nlohmann_json
+		imgui::imgui
+        cmake_git_version_tracking
+        )
+
+target_precompile_headers(${PROJECT_NAME}
+        PRIVATE
+        src/PCH.hpp)
+
+install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/Gts"
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+
+install(TARGETS ${PROJECT_NAME}
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}")
 
 # #######################################################################################################################
 # # Automatic deployment
@@ -113,5 +129,4 @@ if (DEFINED ENV{GTSPLUGIN_COPY_DIR})
 				COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${PROJECT_NAME}> "$ENV{GTSPLUGIN_COPY_DIR}/")
 	endif()
 endif()
-
 
