--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,23 +24,28 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Get cmake
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+          fetch-depth: 0
+      - name: Setup CMake
         uses: lukka/get-cmake@latest
-      - name: Add msbuild to PATH
-        # This works with 2017+
-        uses: microsoft/setup-msbuild@v1.1
-      - name: Restore artifacts, or setup vcpkg (do not install any package)
-        uses: lukka/run-vcpkg@v11
         with:
-          vcpkgGitCommitId: f6a5d4e8eb7476b8d7fc12a56dff300c1c986131
-      - name: Run CMake consuming CMakePreset.json and vcpkg.json by mean of vcpkg.
-        uses: lukka/run-cmake@v10
+          cmakeVersion: "~3.26.2"
+          ninjaVersion: "~1.12.0"
+
+      - name: Set Env
+        uses: TheMrMilchmann/setup-msvc-dev@v3.0.1
         with:
-          # configurePreset: build-release-msvc
-          # buildPreset: release-msvc
-          configurePreset: build-release-withdebuginfo-msvc
-          buildPreset: release-withdebuginfo-msvc
+            arch: x64
+            toolset: 14.42
+
+
+      - name: Compile
+        run: |
+           cmake --preset build-release-withdebuginfo-msvc
+           cmake --build build --config RelWithDebInfo
+            
       - name: Copy Plugin
         shell: bash
         run: |
@@ -54,6 +59,7 @@ jobs:
           fi
           if [ -n "${root_folder}" ]; then
             cp "${root_folder}"/*.dll contrib/Distribution/Plugin/
+            cp "${root_folder}"/*.pdb contrib/Distribution/Plugin/
             ls -la "${root_folder}"/
             ls -la "${root_folder}"/*.pdb
             pdbs=( "${root_folder}"/*.pdb )
