Added new scalable magic effect for growht potions

--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -168,6 +168,9 @@ ShrinkPoison = "GTS.esp|5B5552"
 
 gtsProtectTiniesMGEF = "GTS.esp|763AD1"
 
+# Alchemy (scalable potions)
+AlchEffectGrowth = "GTS.esp|8A2A46"
+
 
 # Crushing
 FakeCrushEffect = "GTS.esp|271EF9"
