Added new scalable magic effect for temporary size increase

--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -170,6 +170,7 @@ gtsProtectTiniesMGEF = "GTS.esp|763AD1"
 
 # Alchemy (scalable potions)
 AlchEffectGrowth = "GTS.esp|8A2A46"
+AlchEffectSize = "GTS.esp|8A2A48"
 
 
 # Crushing
