--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -173,6 +173,7 @@ AlchEffectGrowth = "GTS.esp|8A2A46"
 AlchEffectSize = "GTS.esp|8A2A48"
 AlchEffectEssence = "GTS.esp|8ACC4E"
 AlchEffectMight = "GTS.esp|8ACC51"
+AlchResistShrink = "GTS.esp|8ACC53"
 
 
 # Crushing
