Project Improvements / BugFixes
- Add more build targets
- Backport project improvements from the standalone commonlib version
- Fix Input manager unhandled exception
- Fix wrong log directory on AE > 1130
- Update vcpkg baseline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,8 @@ jobs:
 
       - name: Compile
         run: |
-           cmake --preset build-release-withdebuginfo-msvc
-           cmake --build build/release-msvc --config RelWithDebInfo
+           cmake --preset build-release
+           cmake --build --preset preset-release
             
       - name: Copy Plugin
         shell: bash
