--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,41 +5,57 @@ message("Using toolchain file ${CMAKE_TOOLCHAIN_FILE}.")
 ## Define project
 ########################################################################################################################
 project(
-        GtsPlugin
-        VERSION 2.0.0
-        DESCRIPTION "Size Matters Plugin."
-        LANGUAGES CXX)
+	GtsPlugin
+	VERSION 2.0.0
+	DESCRIPTION "Size Matters Plugin."
+	LANGUAGES CXX
+)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF)
 
 add_compile_definitions(_DISABLE_EXTENDED_ALIGNED_STORAGE)
+add_compile_definitions(GLM_ENABLE_EXPERIMENTAL)
 
 include(GNUInstallDirs)
 
-configure_file(
-        ${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.rc.in
-        ${CMAKE_CURRENT_BINARY_DIR}/version.rc
-        @ONLY)
 
-file(GLOB headers
-        include/GTS/*.hpp)
+# Check if MSVC is the compiler
+if(MSVC)
+    # Extract the version number of the MSVC compiler
+    string(REGEX REPLACE "^([0-9]+)\\.([0-9]+).*" "\\1.\\2" MSVC_VERSION_STRING "${MSVC_VERSION}")
+    message(STATUS "Detected MSVC version: ${MSVC_VERSION_STRING}")
+
+    # Check if the MSVC version is at least 14.39
+    if(MSVC_VERSION LESS 1939)
+        message(FATAL_ERROR "MSVC version 14.39 or higher is required. Detected version: ${MSVC_VERSION_STRING}")
+    endif()
+else()
+    message(FATAL_ERROR "This project requires MSVC")
+endif()
+
+configure_file(
+	${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.rc.in
+	${CMAKE_CURRENT_BINARY_DIR}/version.rc
+	@ONLY
+)
 
 file(GLOB sources
-        src/*.cpp
-        src/*/*.cpp
-        src/*/*/*.cpp
-        src/*/*/*/*.cpp
-
-        ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
+	src/*.cpp
+	src/*/*.cpp
+	src/*/*/*.cpp
+	src/*/*/*/*.cpp
+	${CMAKE_CURRENT_BINARY_DIR}/version.rc
+)
 
 source_group(
-        TREE ${CMAKE_CURRENT_SOURCE_DIR}
-        FILES
-        ${headers}
-        ${sources}
-        )
+	TREE ${CMAKE_CURRENT_SOURCE_DIR}
+	FILES
+	${headers}
+	${sources}
+)
 
 ########################################################################################################################
 ## Configure target DLL
@@ -50,6 +66,7 @@ find_package(glm CONFIG REQUIRED)
 find_package(toml11 CONFIG REQUIRED)
 find_package(nlohmann_json 3.2.0 REQUIRED)
 find_path(GLUINO_INCLUDE_DIRS "gluino/gluino.h")
+find_path(CLIBUTIL_INCLUDE_DIRS "CLibUtil/string.hpp")
 
 include(FetchContent)
 FetchContent_Declare(cmake_git_version_tracking                   
@@ -58,40 +75,31 @@ FetchContent_Declare(cmake_git_version_tracking
 )
 FetchContent_MakeAvailable(cmake_git_version_tracking)
 
-
 add_commonlibsse_plugin(${PROJECT_NAME} DECLARATIVE SOURCES ${headers} ${sources})
 add_library("${PROJECT_NAME}::${PROJECT_NAME}" ALIAS "${PROJECT_NAME}")
 
 target_include_directories(${PROJECT_NAME}
-        PRIVATE
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/src>
-        $<INSTALL_INTERFACE:src>
-        ${GLM_INCLUDE_DIRS}
-        ${GLUINO_INCLUDE_DIRS}
-        )
-
-target_include_directories(${PROJECT_NAME}
-        PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+	PRIVATE
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/src>
+	$<INSTALL_INTERFACE:src>
+	${GLM_INCLUDE_DIRS}
+	${GLUINO_INCLUDE_DIRS}
+	${CLIBUTIL_INCLUDE_DIRS}
+)
 
 target_link_libraries(${PROJECT_NAME}
-        PRIVATE
-        toml11::toml11
-        nlohmann_json::nlohmann_json
-		imgui::imgui
-        cmake_git_version_tracking
-        )
+	PRIVATE
+	toml11::toml11
+	nlohmann_json::nlohmann_json
+	imgui::imgui
+	cmake_git_version_tracking
+)
 
 target_precompile_headers(${PROJECT_NAME}
-        PRIVATE
-        src/PCH.hpp)
-
-install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/Gts"
-        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
-
-install(TARGETS ${PROJECT_NAME}
-        DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+	PRIVATE
+	src/PCH.hpp
+)
 
 # #######################################################################################################################
 # # Automatic deployment
@@ -103,23 +111,29 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
 else()
     set(BUILD_NAME "Release")
 endif()
+
 install(DIRECTORY DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/contrib/Distribution/Papyrus${BUILD_NAME}/")
+
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_CURRENT_SOURCE_DIR}/contrib/Distribution/Plugin${BUILD_NAME}/")
+		
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${PROJECT_NAME}> "${CMAKE_CURRENT_SOURCE_DIR}/contrib/Distribution/Plugin${BUILD_NAME}/")
+		
 if(${CMAKE_BUILD_TYPE} STREQUAL Debug OR ${CMAKE_BUILD_TYPE} STREQUAL RelWithDebInfo OR ${CMAKE_BUILD_TYPE} STREQUAL Release)
     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_PDB_FILE:${PROJECT_NAME}> "${CMAKE_CURRENT_SOURCE_DIR}/contrib/Distribution/Plugin${BUILD_NAME}/")
 endif()
+
 file(GLOB_RECURSE OUTPUT_DLLS "${CMAKE_CURRENT_SOURCE_DIR}/contrib/Distribution/**/*.dll")
 file(GLOB_RECURSE OUTPUT_PDBS "${CMAKE_CURRENT_SOURCE_DIR}/contrib/Distribution/**/*.pdb")
+
 set_property(TARGET ${PROJECT_NAME}
         APPEND PROPERTY ADDITIONAL_CLEAN_FILES "${OUTPUT_DLLS}")
 set_property(TARGET ${PROJECT_NAME}
         APPEND PROPERTY ADDITIONAL_CLEAN_FILES "${OUTPUT_PDBS}")
 
-#For convinience Copy the PDB and dll to the directory defined by this var
+#Also Copy the PDB and dll to the directory defined by this var
 #so i don't have to remember to ctrl c ctrl v all the time
 if (DEFINED ENV{GTSPLUGIN_COPY_DIR})
 	if(${CMAKE_BUILD_TYPE} STREQUAL Debug OR ${CMAKE_BUILD_TYPE} STREQUAL RelWithDebInfo OR ${CMAKE_BUILD_TYPE} STREQUAL Release)
