--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -41,6 +41,7 @@ TinyCalamity_ReachedSpeed = "GTS.esp|7820D7"
 TinyCalamity_AbsorbTiny = "GTS.esp|7B9BE6"
 TinyCalamity_ReadyRune = "GTS.esp|7B9BE5"
 TinyCalamity_SpawnRune = "GTS.esp|7B9BE4"
+TinyCalamity_FingerSnap = "GTS.esp|8A7B4B"
 
 Magic_ProtectTinies = "GTS.esp|772DD4"
 Magic_BreakTinyProtection = "GTS.esp|777ED6"
@@ -216,7 +217,7 @@ Survival_HungerStage5 = "ccQDRSSE001-SurvivalMode.esl|000885"
 [perks]
 TalkToActor = "GTS.esp|5F7265"
 BendLifeless = "GTS.esp|7913D9"
-SmallMassiveThreatSizeSteal = "GTS.esp|2496E8"
+LifeSteal = "GTS.esp|2496E8"
 VorePerk = "GTS.esp|355C68"
 CalamityPerk = "GTS.esp|18E161"
 EternalCalamity = "GTS.esp|5ED064"
