--- a/contrib/Distribution/Config/GtsRuntime.toml
+++ b/contrib/Distribution/Config/GtsRuntime.toml
@@ -263,6 +263,7 @@ Breasts_Suffocate = "GTS.esp|856B3A"
 Breasts_Absorb = "GTS.esp|856B39"
 Breasts_Mastery = "GTS.esp|856B3B"
 Breasts_Predominance = "GTS.esp|856B3D"
+Breasts_Strangle = "GTS.esp|8ACC4C"
 
 MightOfDragons = "GTS.esp|67FDAC"
 
