Support size variety for laughs/moans

--- a/contrib/Distribution/Config/Runtime.toml
+++ b/contrib/Distribution/Config/Runtime.toml
@@ -76,8 +76,32 @@ GTSSoundMagicBreak = "GTS.esp|777ED6"
 GTSSoundMagicProctectTinies = "GTS.esp|772DD4"
 
 GTSSoundLaugh1 = "GTS.esp|09B0A9"
+GTSSoundLaugh1_x2 = "GTS.esp|8D0357"
+GTSSoundLaugh1_x4 = "GTS.esp|8D0358"
+GTSSoundLaugh1_x8 = "GTS.esp|8D0359"
+GTSSoundLaugh1_x12 = "GTS.esp|8D035A"
+GTSSoundLaugh1_x24 = "GTS.esp|8D035B"
+GTSSoundLaugh1_x48 = "GTS.esp|8D035C"
+GTSSoundLaugh1_x96 = "GTS.esp|8D035D"
+
+
 GTSSoundLaugh2 = "GTS.esp|5D3B5B"
+GTSSoundLaugh2_x2 = "GTS.esp|8D035E"
+GTSSoundLaugh2_x4 = "GTS.esp|8D035F"
+GTSSoundLaugh2_x8 = "GTS.esp|8D0360"
+GTSSoundLaugh2_x12 = "GTS.esp|8D0361"
+GTSSoundLaugh2_x24 = "GTS.esp|8D0362"
+GTSSoundLaugh2_x48 = "GTS.esp|8D0363"
+GTSSoundLaugh2_x96 = "GTS.esp|8D0364"
+
 GTSSoundMoan = "GTS.esp|09B0AC"
+GTSSoundMoan_x2 = "GTS.esp|8D0350"
+GTSSoundMoan_x4 = "GTS.esp|8D0351"
+GTSSoundMoan_x8 = "GTS.esp|8D0352"
+GTSSoundMoan_x12 = "GTS.esp|8D0353"
+GTSSoundMoan_x24 = "GTS.esp|8D0354"
+GTSSoundMoan_x48 = "GTS.esp|8D0355"
+GTSSoundMoan_x96 = "GTS.esp|8D0356"
 
 GTSSoundRipClothes = "GTS.esp|30EE54"
 GTSSoundSoftHandAttack = "GTS.esp|5E2E60"
