Alt Heel Sound Set

--- a/contrib/Distribution/Config/Runtime.toml
+++ b/contrib/Distribution/Config/Runtime.toml
@@ -44,6 +44,15 @@ GTSSoundFootstepHighHeels_48x = "GTS.esp|61587B"
 GTSSoundFootstepHighHeels_96x = "GTS.esp|61587C"
 GTSSoundFootstepHighHeels_Mega = "GTS.esp|61587D"
 
+GTSSoundFootstepHighHeels_2x_Alt = "GTS.esp|8D5467"
+GTSSoundFootstepHighHeels_4x_Alt = "GTS.esp|8D5469"
+GTSSoundFootstepHighHeels_8x_Alt = "GTS.esp|8D546A"
+GTSSoundFootstepHighHeels_12x_Alt = "GTS.esp|8D5465"
+GTSSoundFootstepHighHeels_24x_Alt = "GTS.esp|8D5466"
+GTSSoundFootstepHighHeels_48x_Alt = "GTS.esp|8D5468"
+GTSSoundFootstepHighHeels_96x_Alt = "GTS.esp|8D546B"
+GTSSoundFootstepHighHeels_Mega_Alt = "GTS.esp|8D546C"
+
 GTSSoundFootstepLandHighHeels_2x = "GTS.esp|61588E"
 GTSSoundFootstepLandHighHeels_4x = "GTS.esp|61588F"
 GTSSoundFootstepLandHighHeels_8x = "GTS.esp|615890"
